fix action icon overlap;

--- a/web/app/themes/stone-roberts-anew/resources/assets/styles/components/_artwork-piece.scss
+++ b/web/app/themes/stone-roberts-anew/resources/assets/styles/components/_artwork-piece.scss
@@ -53,7 +53,7 @@
     .caption {
       display: inline-block;
       margin-right: 1%;
-      width: 81%;
+      width: calc(100% - 118px);
     }
     .artwork-meta {
       display: flex; // position: absolute;
